# tsukuba-gdmc-2022

./: .gitignore  .pre-commit-config.yaml  README.md  biomes.yaml  build_area.py  construction_plot.py  env.py  house_placer.py  main.py  profile.txt  profiler.prof  pyproject.toml  requirements.txt  utils.py
blocks/: block.py
blocks/collections/: block_list.py  block_set.py
modules/blocks/: block.py  structure.py
modules/plots/: construction_plot.py  house_generator.py  plot.py  suburb_plot.py
modules/simulation/: simulation.py
modules/utils/: coordinates.py  criteria.py  direction.py  loader.py  simulation.py
plots/: building_plot.py  construction_plot.py  house_generator.py  plot.py  suburb_plot.py
resources/: buildings.yaml  creatures.txt  descriptions.yaml  events.yaml  loot_table.yaml  palettes.yaml  relations.yaml
resources/generation/: building-adjectives.txt  wolf-names.txt
resources/structures/: bakery.nbt  big_house.nbt  brickyard.nbt  farm.nbt  forge.nbt  graveyard.nbt  house.nbt  house1.nbt  house2.nbt  house2_test_palette.nbt  house3.nbt  house_little.nbt  mine_stairs.nbt  mine_top.nbt  sawmill.nbt  small_town_hall.nbt  tower_base.nbt  tower_slice.nbt  tower_top.nbt  town_hall.nbt  watch_tower.nbt  wedding_totem.nbt
src/: env.py  view.py
src/blocks/: block.py  structure.py
src/plots/: house_generator.py  plot.py
src/simulation/: city.py  decisions.py  event.py  events.py  relations.py  settlement.py  simulation.py  villager.py
src/utils/: action_type.py  book_maker.py  chest.py  coordinates.py  (+6 more)
utils/: block.py  block_list.py  coordinates.py  direction.py  structure.py
(+98 files in other folders)
