[tool.poetry]
name = "tsukuba-gdmc-2022"
version = "0.1.0"
description = ""
authors = ["AlexisMoins <moinsalexis@gmail.com>", "kz2wd"]

[tool.poetry.dependencies]
python = "^3.10"
gdpc = "^5.0.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^7.1.2"

[tool.autopep8]
max_line_length = 120

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
