[tool.poetry]
name = "tsukuba-gdmc-2022"
version = "0.1.0"
description = ""
authors = ["Alexis Moins <moinsalexis@gmail.com>", "Youri Chancrin <yrus.chan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gdpc = "^5.0.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^7.1.2"
pre-commit = "^2.18.1"

[tool.autopep8]
max_line_length = 120

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
